# radix_trie_benchmarks

./: .gitignore  Makefile  README.md
haskell/: stack.yaml  trie-benchmarks.cabal
haskell/src/: Benchmark.hs
results/: 1984.txt  sun-rising.txt
rust/: Cargo.toml
rust/src/: benchmark.rs  lib.rs
