name:                trie-benchmarks
version:             0.0.1.0
license:             GPL-3
author:              Michael Sproul
maintainer:          micsproul@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable benchmark
  hs-source-dirs: src
  main-is: Benchmark.hs
  build-depends:       base >= 4.7, criterion, bytestring-trie, bytestring
  default-language:    Haskell2010
